[Password Manager] Check node visibility with isFocusable instead of hasNonEmptyLayoutSize

Autofill already uses isFocusable

BUG=593246, 589533

Review-Url: https://codereview.chromium.org/2769023003
Cr-Commit-Position: refs/heads/master@{#460064}

Former-commit-id: 7717d24507eb8aa830a8fdf7d5c202a43a8803ae